# timesheet

./: LICENSE  README  README.md  changelog.md  package.yaml  timesheet.cabal
src/: main.hs
src/Timesheet/: Opts.hs
src/app/: Main.hs  Opts.hs
src/lib/: Timesheet.hs
src/test/: Main.hs
util/prefs/: boring
util/resources/: hours  hours1  hours2  hours3  hours4
