name:                timesheet
cabal-version:       >= 1.8
version:             1.1
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2011-2014 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           stable
homepage:            http://ui3.info/d/proj/timesheet.html
synopsis:            Add up timesheet values
description:         Add up hours for days and weeks from a simple text file format.
category:            Unknown
tested-with:         GHC >= 7.6.1

executable           timesheet
   main-is:          main.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, regex-compat
   ghc-options:      -Wall
