name:                timesheet
cabal-version:       >= 1.8
version:             1.1
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2011-2014 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           stable
homepage:            http://hub.darcs.net/dino/timesheet
synopsis:            Add up timesheet values
description:         Add up hours for days and weeks from a simple text file format.
category:            Unknown
tested-with:         GHC >= 7.6.1

source-repository    head
   type:             darcs
   location:         http://hub.darcs.net/dino/timesheet

executable           timesheet
   main-is:          main.hs
   hs-source-dirs:   src
   build-depends:    base >= 3 && < 5, regex-compat
   ghc-options:      -Wall
